# semantic_cloud

./: CMakeLists.txt  README.md  package.xml
config/: semantic_cloud.yaml
include/color_pcl_generator/: color_pcl_generator.py
launch/: semantic_mapping.launch
misc/: semantic_label.py
msg/: SemanticColoredLabel.msg  SemanticColoredLabels.msg
src/: .directory  semantic_cloud.py  semantic_labelling.py
srv/: GetSemanticColoredLabels.srv
